# cyfs-browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
browser_install/: RestartRuntime.bat  browser_runtime_setup.nsi  license.txt
cyfs-component/ipfs-proxy/src/ipfs-proxy/: Cargo.toml
cyfs-component/ipfs-proxy/src/ipfs-proxy/src/: ipfs_proxy.rs  ipfs_stub.rs  main.rs  proxy.rs
patch_code/: .gitignore.patch  1.diff  10.diff  11.diff  12.diff  13.diff  2.diff  3.diff  4.diff  5.diff  6.diff  7.diff  8.diff  9.diff  build-toolchain-win-setup_toolchain.py.patch  build-util-version.gni.patch  build-win-reorder-imports.py.patch  chrome-BUILD.gn.patch  chrome-app-chrome_exe.ver.patch  chrome-app-chrome_exe.vsprops.patch  chrome-app-chrome_version.rc.version.patch  chrome-app-main_dll_loader_win.cc.patch  chrome-app-theme-chromium-BRANDING.patch  chrome-app-version_assembly-BUILD.gn.patch  chrome-app-version_assembly-chrome_exe_manifest.template.patch  chrome-app-version_assembly-version_assembly_manifest.template.patch  chrome-browser-BUILD.gn.patch  chrome-browser-chrome_browser_main_win.cc.patch  chrome-browser-chrome_content_browser_client.cc.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.cc.patch  chrome-browser-extensions-api-runtime-chrome_runtime_api_delegate.cc.patch  chrome-browser-extensions-extension_context_menu_model.cc.patch  chrome-browser-extensions-extension_context_menu_model.h.patch  (+109 more)
resource/: change_files.json
resource/components/cyfs_init/: BUILD.gn  cyfs_runtime_init_service.cc  cyfs_runtime_init_service.h
(+80 files in other folders)
