# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("cyfs_init") {
  sources = [
    "cyfs_runtime_init_service.h",
    "cyfs_runtime_init_service.cc",
  ]

  deps = [
    "//base",
    "//components/api_request_helper",
    "//components/keyed_service/core",
    "//components/strings",
    "//ui/base",
  ]
}


