[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-base = "0.6"
cyfs-debug = "0.6"
cyfs-util = "0.6"
clap = "2"
dirs = "4.0"
async-std = { version = "1.11", features = ["attributes"] }
tide = "0.16"
log = "0.4"
async-trait = "0.1.58"
async-h1 = {path="../async-h1"}
http-types = "2.12"
serde_json = "1.0"
cid = "0.10"